--- a/index.html
+++ b/index.html
@@ -119,9 +119,11 @@
 							<section id="two">
 								<div class="inner">
 									<header class="major">
-										<h2>Massa libero</h2>
+										<h2>About Me</h2>
 									</header>
-									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
+									<p>Results-driven Data professional with a strong foundation in machine learning, and predictive analytics. Skilled in extracting insights from complex datasets, developing data-driven solutions, and supporting business decision-making. Proficient in Python (Pandas, NumPy, Scikit-Learn, TensorFlow), SQL, and data visualization tools (Tableau, Matplotlib, Seaborn, Plotly).
+										
+										Experience includes data analysis, database management, and building analytical models to improve data quality, and generate actionable insights. Adept at collaborating with cross-functional teams, communicating findings effectively, and ensuring data integrity. Passionate about leveraging advanced analytics and statistical techniques to drive measurable business impact.</p>
 									<ul class="actions">
 										<li><a href="landing.html" class="button next">Get Started</a></li>
 									</ul>
@@ -160,14 +162,14 @@
 									<div class="contact-method">
 										<span class="icon solid alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="#">tilejoy92@gmail.com/a>
+										<a href="#">tilejoy92@gmail.com</a>
 									</div>
 								</section>
 								<section>
 									<div class="contact-method">
 										<span class="icon solid alt fa-phone"></span>
 										<h3>Phone</h3>
-										<span>(000) 000-0000 x12387</span>
+										<span>+44 7466004724</span>
 									</div>
 								</section>
 								<section>
