--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>Forty</strong> <span>by HTML5 UP</span></a>
+						<a href="index.html" class="logo"><strong>JOY TILE</strong> <span>DATA PORTFOLIO</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -48,7 +48,7 @@
 							<div class="content">
 								<p>A driven data scientist.</p>
 								<ul class="actions">
-									<li><a href="#one" class="button next scrolly">View some of my work</a></li>
+									<li><a href="#one" class="button next scrolly">View my work</a></li>
 								</ul>
 							</div>
 						</div>
