--- a/index.html
+++ b/index.html
@@ -64,8 +64,11 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Aliquam</a></h3>
-										<p>Ipsum dolor sit amet</p>
+										<h3><a href="https://github.com/joytile/Early-Dementia-Detection-with-Deep-Learning" class="link">Early Dementia Detection with Deep Learning</a></h3>
+										<p>Utilized deep learning and classical machine learning techniques to predict early-stage dementia using clinical, demographic, and cognitive data. Conducted detailed exploratory analysis to uncover key risk factors, and built models optimized for recall to support early intervention in healthcare.</p>
+										<ul class="actions">
+									<li><a href="https://github.com/joytile/Early-Dementia-Detection-with-Deep-Learning" class="button next scrolly">View Project</a></li>
+								</ul>
 									</header>
 								</article>
 								<article>
