--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 							<section id="one" class="tiles">
 								<article>
 									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="images/image1.webp" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="https://github.com/joytile/Early-Dementia-Detection-with-Deep-Learning" class="link">Early Dementia Detection with Deep Learning</a></h3>
