--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						<div class="inner">
 							<div class="logo"><span class="icon fa-gem"></span></div>
 							<h2>Hi, I'm JOY TILE</h2>
-							<p>A Driven<a href="http://html5up.net">DATA SCIENTIST</a></p>
+							<p>A Driven <a href="http://html5up.net">DATA SCIENTIST</a></p>
 						</div>
 					</section>
 
@@ -55,11 +55,11 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+									<a href="https://github.com/joytile/Early-Dementia-Detection-with-Deep-Learning" class="image"><img src="images/dementia1.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Magna arcu feugiat</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
+										<h2 class="major">Early Dementia Detection with Deep Learning</h2>
+										<p> Utilized deep learning and classical machine learning techniques to predict early-stage dementia using clinical, demographic, and cognitive data. Conducted detailed exploratory analysis to uncover key risk factors, and built models optimized for recall to support early intervention in healthcare.</p>
+										<a href="https://github.com/joytile/Early-Dementia-Detection-with-Deep-Learning" class="special">Learn more</a>
 									</div>
 								</div>
 							</section>
