--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="https://github.com/joytile/Early-Dementia-Detection-with-Deep-Learning" class="image"><img src="images/dementia1.jpg" alt="" /></a>
+									<a href="https://github.com/joytile/Early-Dementia-Detection-with-Deep-Learning" class="image"><img src="images/dementia1.webp" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Early Dementia Detection with Deep Learning</h2>
 										<p> Utilized deep learning and classical machine learning techniques to predict early-stage dementia using clinical, demographic, and cognitive data. Conducted detailed exploratory analysis to uncover key risk factors, and built models optimized for recall to support early intervention in healthcare.</p>
@@ -157,13 +157,13 @@
 									United Kingdom
 								</li>
 								<li class="icon solid fa-phone">+44 7466004724</li>
-								<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-								<li class="icon brands alt fa-github"><a href="https://github.com/joytile">Github</a></li>
-								<li class="icon brands fa-linkedin-in"><a href="https://www.linkedin.com/in/joy-dooshima-tile/">Linkedin</a></li>
-								<li class="icon brands fa-medium"><a href="https://medium.com/@tilejoy">Medium</a></li>
+								<li class="icon solid fa-envelope"><a href="#">tilejoy92@gmail.com</a></li>
+								<li class="icon brands alt fa-github"><a href="https://github.com/joytile">joytile</a></li>
+								<li class="icon brands fa-linkedin-in"><a href="https://www.linkedin.com/in/joy-dooshima-tile/">Joy Dooshima Tile</a></li>
+								<li class="icon brands fa-medium"><a href="https://medium.com/@tilejoy">@tilejoy</a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Joy Tile. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</section>
