--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="https://github.com/joytile/Customer-Churn-Analysis-and-Prediction-with-Machine-Learning" class="image"><img src="images/churn_status.png" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Tempus adipiscing</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
+										<h2 class="major">PowerCo Churn Analysis & Prediction with Machine Learning</h2>
+										<p>This project aims to identify customers at risk of churning from PowerCo using advanced machine learning techniques. By analyzing historical customer data and price data, I built and tuned ensemble models to forecast churn. The model identified strong drivers of customer churn and provided actionable insights to support proactive retention strategies.</p>
+										<a href="https://github.com/joytile/Customer-Churn-Analysis-and-Prediction-with-Machine-Learning" class="special">Learn more</a>
 									</div>
 								</div>
 							</section>
