--- a/index.html
+++ b/index.html
@@ -55,6 +55,18 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
+									<a href="https://github.com/joytile/British-Airways-Review-Sentiment-Analysis" class="image"><img src="images/BA.jpg" alt="" /></a>
+									<div class="content">
+										<h2 class="major">British Airways Review Sentiment Analysis</h2>
+										<p>This study analyzed 3,500+ British Airways passenger reviews using Zero-Shot Classification, Sentiment Analysis, and a rule-based fallback system to uncover actionable business insights.</p>
+										<a href="https://github.com/joytile/British-Airways-Review-Sentiment-Analysis" class="special">Learn more</a>
+									</div>
+								</div>
+							</section>
+
+						<!-- Two -->
+							<section id="two" class="wrapper alt spotlight style2">
+								<div class="inner">
 									<a href="https://github.com/joytile/Early-Dementia-Detection-with-Deep-Learning" class="image"><img src="images/dementia1.webp" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Early Dementia Detection with Deep Learning</h2>
@@ -64,26 +76,14 @@
 								</div>
 							</section>
 
-						<!-- Two -->
-							<section id="two" class="wrapper alt spotlight style2">
+						<!-- Three -->
+							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="https://github.com/joytile/Customer-Churn-Analysis-and-Prediction-with-Machine-Learning" class="image"><img src="images/churn_image.png" alt="" /></a>
+									<a href="https://github.com/joytile/Customer-Churn-Analysis-and-Prediction-with-Machine-Learning" class="image"><img src="images/churn_status.png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">PowerCo Churn Analysis & Prediction with Machine Learning</h2>
 										<p>This project aims to identify customers at risk of churning from PowerCo using advanced machine learning techniques. By analyzing historical customer data and price data, I built and tuned ensemble models to forecast churn. The model identified strong drivers of customer churn and provided actionable insights to support proactive retention strategies.</p>
 										<a href="https://github.com/joytile/Customer-Churn-Analysis-and-Prediction-with-Machine-Learning" class="special">Learn more</a>
-									</div>
-								</div>
-							</section>
-
-						<!-- Three -->
-							<section id="three" class="wrapper spotlight style3">
-								<div class="inner">
-									<a href="https://github.com/joytile/British-Airways-Review-Sentiment-Analysis" class="image"><img src="images/pic03.jpg" alt="" /></a>
-									<div class="content">
-										<h2 class="major">British Airways Review Sentiment Analysis</h2>
-										<p>This study analyzed 3,500+ British Airways passenger reviews using Zero-Shot Classification, Sentiment Analysis, and a rule-based fallback system to uncover actionable business insights.</p>
-										<a href="https://github.com/joytile/British-Airways-Review-Sentiment-Analysis" class="special">Learn more</a>
 									</div>
 								</div>
 							</section>
