--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
-								<li><a href="generic.html">Generic</a></li>
-								<li><a href="elements.html">Elements</a></li>
+								<!-- <li><a href="generic.html">Generic</a></li> -->
+								<!-- <li><a href="elements.html">Elements</a></li> -->
 <!-- 								<li><a href="#">Log In</a></li> -->
 <!-- 								<li><a href="#">Sign Up</a></li> -->
 							</ul>
@@ -89,7 +89,7 @@
 							</section>
 
 						<!-- Four -->
-							<section id="four" class="wrapper alt style1">
+							<!-- <section id="four" class="wrapper alt style1">
 								<div class="inner">
 									<h2 class="major">More Projects</h2>
 									<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
@@ -123,7 +123,7 @@
 										<li><a href="https://github.com/joytile?tab=repositories" class="button">Browse All</a></li>
 									</ul>
 								</div>
-							</section>
+							</section> -->
 
 					</section>
 
