Updating index file

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						<div class="inner">
 							<div class="logo"><span class="icon fa-gem"></span></div>
 							<h2>Hi, I'm JOY TILE</h2>
-							<p>A Driven <a href="http://html5up.net">DATA SCIENTIST</a></p>
+							<p>DATA SCIENTIST | <a href="http://html5up.net">AI ENTHUSIAST</a></p>
 						</div>
 					</section>
 
